dist/docs/3.0.0/media-buy/product-discovery/example-briefs.mdx
---
sidebar_label: Example Briefs
title: Example Campaign Briefs
description: "AdCP example campaign briefs — annotated examples from minimal to advanced showing how natural language briefs drive product discovery in get_products."
"og:title": "AdCP — Example Campaign Briefs"
---


These annotated examples demonstrate how natural language briefs work in AdCP, describing target customers and campaign objectives to help publishers recommend appropriate media products.

## 1. Minimal Brief: Essential Elements

### Local Service Business

```json
{
  "buying_mode": "brief",
  "brief": "Mike's Plumbing Services needs to reach homeowners in the Denver, Colorado area who might need plumbing services. We have $8,000 USD to spend from October 15-31, 2024. Looking for display and native formats to drive phone calls."
}
```

**Why This Works:**
- ✅ **Clear business** - Mike's Plumbing Services
- ✅ **Customer description** - Homeowners needing plumbing
- ✅ **Geographic market** - Denver, Colorado (USA implied)
- ✅ **Format preferences** - Display and native
- ✅ **Budget and timing** - $8,000 USD over 2 weeks
- ✅ **Business outcome** - Phone calls

**Publisher Interpretation:**
Publishers can suggest targeting approaches like:
- Homeownership signals
- Home improvement interest
- Local service searchers
- Emergency service needs

---

## 2. Standard Brief: Customer Story

### E-commerce Product Launch

```json
{
  "buying_mode": "brief",
  "brief": "TechGear Pro is launching premium wireless headphones in the United States. Our customers are typically young professionals who commute, work out regularly, and value high-quality audio for both music and calls. They're willing to pay more for products that last longer and perform better. We need video and display formats to drive online sales during our launch November 1-14, 2024. Budget is $25,000 USD with a target of acquiring customers at $45-55 each."
}
```

**Why This Works:**
- ✅ **Customer profile** - Young professionals with active lifestyles
- ✅ **Customer values** - Quality, durability, performance
- ✅ **Geographic market** - United States
- ✅ **Format needs** - Video and display
- ✅ **Clear economics** - $45-55 customer acquisition cost
- ✅ **Natural description** - Lets publishers suggest targeting

**Publisher Suggestions Might Include:**
- Commuter targeting
- Fitness enthusiast segments
- Premium brand affinity
- Audio equipment researchers
- Professional demographic overlays

---

## 3. Comprehensive Brief: B2B Customer Description

### Enterprise Software Campaign

```json
{
  "buying_mode": "brief",
  "brief": "CloudSync Solutions helps companies manage data across multiple cloud platforms. Our ideal customers are growing businesses in the United States, Canada, United Kingdom, and Germany that have recently adopted cloud services and are struggling to keep data synchronized. These companies typically have distributed teams, use multiple SaaS tools, and are concerned about data security and compliance. The decision makers are usually technical leaders who report directly to the C-suite and are tasked with modernizing their company's infrastructure. We're looking for native content and display formats to generate qualified leads at $200-250 per lead. Q4 2024 campaign with $90,000 USD total budget."
}
```

**Why This Works:**
- ✅ **Customer context** - Growing businesses with cloud challenges
- ✅ **Customer pain points** - Data sync, security, compliance
- ✅ **Decision maker profile** - Technical leaders near C-suite
- ✅ **Multiple countries** - US, CA, UK, DE specified
- ✅ **Format preferences** - Native content and display
- ✅ **Flexible targeting** - Publishers can interpret signals

**Publisher Interpretation Opportunities:**
- Cloud adoption signals
- Company growth indicators
- Technology stack analysis
- Title and seniority matching
- Industry compliance needs

---

## 4. Advanced Brief: Multi-Audience Campaign

### Automotive Launch

```json
{
  "buying_mode": "brief",
  "brief": "EcoMotion is launching our new hybrid SUV in the United States, specifically California, Pacific Northwest, and Northeast regions. We have three distinct customer groups we want to reach with video, Connected TV, and display formats:

1. Eco-conscious families who currently drive older SUVs and are concerned about their environmental impact but need the space for kids and activities. They research extensively and value safety ratings and environmental certifications.

2. Tech-forward professionals who see their vehicle as an extension of their digital lifestyle. They're early adopters who want the latest features and are willing to pay premium prices for innovation.

3. Current owners of competitor vehicles (Toyota Highlander, Honda Pilot) who might be in market for their next vehicle. They value reliability and total cost of ownership.

Campaign runs October-December 2024 with $450,000 USD budget. Success means driving dealership visits and test drive appointments."
}
```

**Why This Works:**
- ✅ **Three distinct customer stories** - Each with different motivations
- ✅ **Regional focus** - Specific US regions identified
- ✅ **Format strategy** - Video, CTV, and display
- ✅ **Competitive context** - Without being prescriptive
- ✅ **Customer journey insights** - Research behavior, values
- ✅ **Clear success metrics** - Dealership engagement

**Publisher Value-Add:**
- Suggest family-oriented contexts
- Identify early adopter signals
- Find competitive conquesting opportunities
- Layer in environmental interest data
- Apply automotive shopping behaviors

---

## Industry-Specific Examples

### Financial Services - United States
```json
{
  "buying_mode": "brief",
  "brief": "NextGen Banking is promoting our high-yield savings account across the United States. Our target customers are professionals who have accumulated some savings but keep it in traditional banks earning minimal interest. They're financially responsible but not necessarily investment-savvy, and they value security and ease of use over complex features. Looking for display and native formats to acquire 5,000 new accounts in January 2025 with $400,000 USD budget."
}
```

### Healthcare - Regional US
```json
{
  "buying_mode": "brief",
  "brief": "HealthFirst Urgent Care serves families in Ohio who need convenient, affordable healthcare. Our patients typically have insurance but want to avoid emergency room costs and wait times. They're parents with young children, working professionals who can't take time off for appointments, and seniors who need accessible care close to home. We need display and video formats to drive appointment bookings. $20,000 USD monthly budget."
}
```

### Streaming Service - North America
```json
{
  "buying_mode": "brief",
  "brief": "StreamPlus is expanding in the United States and Canada. Our subscribers love live sports but have cut the cord on traditional cable. They're social viewers who watch games with friends and family, follow multiple teams, and want access to both local and national broadcasts. We need Connected TV, video, and display formats for our Q4 2024 campaign with $2M USD budget to drive free trial sign-ups."
}
```

### Broadcast TV - Regional Automotive

```json
{
  "buying_mode": "brief",
  "brief": "Nova Motors is launching the Volta EV across the top 10 US DMAs. We need primetime :30 spots on major network affiliates (ABC, NBC, CBS, FOX) and late fringe :15 spots for frequency. Adults 25-54, $400K budget, 4-week flight in Q4 2026. We want to guarantee against C7 ratings with VideoAmp as the measurement vendor."
}
```

This brief includes broadcast-specific concepts: DMAs (designated market areas), spot lengths (:30 and :15), dayparts (primetime, late fringe), and a measurement window preference (C7). The seller interprets these against their station schedule and available avails.

### Mobile Gaming - Global English Markets
```json
{
  "buying_mode": "brief",
  "brief": "GameStudio is launching our puzzle game in the United States, United Kingdom, Canada, and Australia. Our players are typically adults who play mobile games during commutes, breaks, and before bed. They've played games like Candy Crush or Wordle and enjoy mental challenges that don't require long time commitments. Looking for video and display formats to acquire 50,000 players at $3.50 each in January 2025 with $175,000 USD budget."
}
```

---

## Brief Writing Best Practices

### Describe Your Customer Naturally

Instead of prescribing targeting tactics, describe your customer's:
- **Situation**: What's happening in their life/business?
- **Challenges**: What problems do they face?
- **Values**: What matters to them?
- **Behaviors**: How do they research and buy?
- **Context**: When and why do they need you?

### Always Include Geographic Scope

- Specify countries explicitly
- Include currency (USD, EUR, GBP, etc.)
- Note regional focuses within countries
- Consider time zones for global campaigns

### Specify Format Preferences

Include format types to indicate channel strategy:
- **Display**: Standard web advertising
- **Video**: In-stream and out-stream video
- **Connected TV**: Television streaming ads
- **Audio**: Podcast and music streaming
- **Native**: Content-style advertising

### Let Publishers Add Value

Good briefs leave room for publisher expertise:
- Describe customers, not targeting parameters
- Share context, not just demographics
- Explain the "why" behind your campaign
- Allow for creative targeting suggestions

---

## What's Different About AdCP Briefs

### ✅ DO Include:
- Customer descriptions and stories
- Geographic markets and currencies
- Format preferences (indicates channels)
- Business objectives and KPIs
- Budget and timing
- Competitive context

### ❌ DON'T Prescribe:
- Specific targeting parameters
- Exact audience segments
- Technical implementations
- Frequency caps or bid strategies
- Attribution methodologies

### 🤝 Let Publishers:
- Suggest targeting approaches
- Recommend audience strategies
- Optimize based on their data
- Apply their platform expertise
- Test and learn what works

---

## Brief Evaluation Checklist

### Essential Elements
- [ ] Clear advertiser/brand identification
- [ ] Geographic markets specified
- [ ] Currency indicated
- [ ] Format preferences stated
- [ ] Budget and timing included
- [ ] Business objective defined

### Customer Description
- [ ] Customer situation/context
- [ ] Problems they're solving
- [ ] How they make decisions
- [ ] What they value
- [ ] Natural, conversational tone

### Campaign Context
- [ ] Why this campaign now?
- [ ] Success metrics defined
- [ ] Competitive landscape mentioned
- [ ] Flexibility for publisher input

---

## Related Documentation

- [Brief Expectations](/dist/docs/3.0.0/media-buy/product-discovery/brief-expectations) - How publishers process briefs
- [Creative Formats](/dist/docs/3.0.0/creative/formats) - Understanding format specifications and discovery
- [Media Buy Lifecycle](/dist/docs/3.0.0/media-buy/media-buys) - Campaign execution workflow
- [Product Discovery](/dist/docs/3.0.0/media-buy/product-discovery) - How briefs influence product selection